fix hover on mobile

--- a/src/components/Toast/index.scss
+++ b/src/components/Toast/index.scss
@@ -19,6 +19,7 @@
 	opacity: 1;
 	transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
 	font-size: max(.8rem, 1vw);
+	z-index: 5;
 
 	&.hidden {
 		opacity: 0;
